@@ -2,7 +2,7 @@
 $rc=0;
 
 $output=`wbemcli ei http://localhost:5988/root/cimv2:bogusclass 2>&1 1>/dev/null`;
-unless ($output =~ /CIM_ERR_INVALID_CLASS: Invalid class/ ) {
+unless ($output =~ /CIM_ERR_INVALID_CLASS: Class not found/ ) {
     print "\tIncorrect error message for: \"Invalid class\".\n"; 
     $rc=1;
 }
