@@ -37,6 +37,7 @@ Bugs fixed:
 - 2192053 _methProvider return value not checked propery
 - 2168840 Fix various compiler warnings.
 - 2169807 XML parser does not handle all character references
+- 2042150 Mismatched CMPI error code and error message
 
 Changes in 1.3.2
 ================
